# PiltiApp

./: .gitignore  index.html  package-lock.json  package.json  round_icon.cjs
.github/workflows/: publish.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
