[package]
name = "pilti"
version = "1.0.0"
description = "Pilti PWA Wrapper"
authors = ["umesh"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "dialog-all", "fs-all", "global-shortcut-all", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tokio = { version = "1", features = ["time"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
